Version 6.0.5
- workaround for .NET compact framework problems when writing behind the end of MemoryStream 
(contributed by Nicholas Piasecki) (bug#43736)
- added keepalive connection option that can be used to detect network outages faster 
  and prevent firewalls from dropping idle connections (bug#40684)
- fixed bug where our internal driver was using a batched command even if the user had added
  'allow batch=false' to their connection string (bug #45502)
- we are now throwing an exception when DeriveParameters is unable to successfully populate
  the parameters array.  This exception explains what is wrong (bug #45952)  
- fixed potential infinite loop in LoadPacket(), when read from a stream returns 0. (bug#46308)
- fixed bug where editing a table and giving a size based type that is different than
  the default (i.e. varchar(20)) would cause other columns that have the default
  to fail (bug #46100)
- fixed mono compilation by removing the space delimited warning list from the project file
  and including a solution that builds with MonoDevelop 2.0. (bug #42411)
- fixed 'can't find svctag.xml' installer bug (thanks Iggy!)  (bug #45474)
- fixed DbSkipExpression so that it would respect any sort clauses that are attached
  (thanks Lynn!) (bug #45723)
  
Version 6.0.4
- fixed regression where using stored procs with datasets (bug #44460)
- fixed compilation under VS 2005 (bug #44822)
- fixed support for bool data type in entity framework support
- fixed regression where a user could no longer call GetBytes on a guid column (bug #44507)
- made some fixes to the syntax coloring of sql inside visual studio
- fixed display name of triggers inside server explorer
- fixed trigger editing
- fixed tokenization of escaped backslashes (bug #44960)
- fixed conversion of binary(16) type to guid for entity framework models (bug #44986)
- migrated from CTC to VSCT for our menus and buttons.  Also the VisualStudio project will also