@@ -1,4 +1,6 @@
 Version 6.0.5
+- fixed memory leak in server when calling stored procedure with output parameter many times 
+  in the same session (bug#36027)
 - workaround for .NET compact framework problems when writing behind the end of MemoryStream 
 (contributed by Nicholas Piasecki) (bug#43736)
 - added keepalive connection option that can be used to detect network outages faster 
